@@ -4,6 +4,7 @@ Revision history for Net-Silverpeak-Orchestrator
     - add get_appliance_extrainfo method
     - add get_deployment method
     - add get_interface_state method
+    - add get_interface_labels_by_type method
 
 0.006000  2023-05-08 17:30:22+02:00 Europe/Budapest
     - add support for user/password login when Enforce CSRF Token Check is
